modify input box

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                 <li>1000tk</li>
                 <li>5000tk</li>
             </ul>
-            <h2>Other Amount(Taka)</h2>
+            <input type="text" id="ammount" placeholder="Other Amount(Taka)">
             <hr>
             <a href="#" target="_blank">Donate Now</a>
         </div>
