image recheck and input change

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         </p>
         <div class="plan_part">
             <div class="plan one">
-                <img src="Images/food.png" alt="food_images">
+                <img src="images/food.png" alt="food_images">
                 <h1>Food for a family</h1>
                 <p>Pepole cannot live without food. It is their basic need. A person can live without anything but not
                     food.
@@ -65,7 +65,7 @@
 
 
             <div class="plan two">
-                <img src="Images/shelter.png" alt="shelter_images">
+                <img src="images/shelter.png" alt="shelter_images">
                 <h1>
                     Shelter for a family
                 </h1>
@@ -79,7 +79,7 @@
 
 
             <div class="plan three">
-                <img src="Images/Frame-1.png" alt="educational_images">
+                <img src="images/Frame-1.png" alt="educational_images">
                 <h1>Education for a child</h1>
                 <p>
                     Education is the backbone of a nation. Children should be educated for develop a nation. And it is
